# graph-dash-visualizer

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
data/: sample_edges.json  sample_nodes.json  sample_queries.txt
