[project]
name = "graph-dash-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-mantine-components>=2.0.0",
    "dash>=3.1.0",
    "dash-iconify>=0.1.0",
    "dash-cytoscape>=0.3.0",
    "networkx>=3.0.0",
    "grand-cypher>=1.0.0",
]
